<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="look_my_gui">Look at my GUI</string>
    <string name="check_this_out">Check this out</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="type_here">Type here</string>
    <string name="enter_email">Enter your email address</string>
    <string name="hint_email">Type email here</string>
    <string name="login">LOGIN</string>
    <string name="your_email">Your email:</string>
    <string name="your_name">Your name:</string>
    <string name="hint_name">Enter your name</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_to_take_a_picture">Click the button above to take a picture</string>
    <string name="type_your_password">Type your password</string>
    <string name="your_profile">Your profile</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>

</resources>
