<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        />
    <EditText
        android:id="@+id/type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/hint_name"
        />
    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        />
    <EditText
        android:id="@+id/type_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />
    <TextView
        android:id="@+id/text_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_picture"
        />
    <ImageButton
        android:id="@+id/button_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        />
    <TextView
        android:id="@+id/text_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_take_a_picture"
        />
</LinearLayout>