<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_my_gui"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"
        android:textSize="30dp"

    />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_this_out"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />
    <ImageButton
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_weight="1"
        android:layout_gravity="fill"

        />
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_on_off"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/type_here"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:layout_gravity="top"
            />
</GridLayout>