<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <ListView
        android:id="@+id/list_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/button_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/receive"

        />
    <EditText
        android:id="@+id/edit_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/button_send"
        android:layout_toLeftOf="@id/button_receive"
        />
</RelativeLayout>